fix(ui): improve contrast for primary sha labels
it is currently broken by aggressive !important label overrides in forgejo-theme-dark, but removing them will cause a cascade effect.

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -1250,8 +1250,9 @@ td .commit-summary {
   border: 1px solid var(--color-light-border);
 }
 
-.primary.sha.label {
+.ui.primary.sha.label {
   border: none !important;
+  background: var(--color-primary) !important;
 }
 
 .sha.label .shortsha {
